# pico-bot

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
pcb/footprints/pico-bot.pretty/: 1101M2S3CRE2.kicad_mod  GY521_MPU_6050_CARRIER.kicad_mod  RPi_Pico_SMD_TH.kicad_mod  TB6612FNG-CARRIER.kicad_mod
pcb/pico-bot/: #auto_saved_files#  fp-lib-table  pico-bot.kicad_pcb  pico-bot.kicad_prl  pico-bot.kicad_pro  pico-bot.kicad_sch  sym-lib-table
pcb/symbols/: pico-bot.kicad_sym
playground/: CMakeLists.txt  playground.c
software/: Cargo.toml
software/src/: main.rs
